# astrAI

./: .env.example  .gitignore  GCP_DEPLOY.md  IMAGE_ANALYSIS_DIRECT.md  JUPITER_MASTER_SPECTRA.pkl  README.md  app.py  archtecture.excalidraw  labelsclassifier(CNN).ipynb  main.py  mlflow.db  mlruns.db  pyproject.toml  requirements_spectral.txt  start_spectral_service.bat  test_spectral_service.py
Spectral Data Cleaning and Sorting/: Data Cleaning Code Backup.py
Spectral Data Cleaning and Sorting/Mars - mastDownload/UV data/: MARS_RAW_MASTER.pkl
Spectral Data Cleaning and Sorting/Neptune - mastDownload/UV data/: NEPTUNE_RAW_MASTER.pkl
Spectral Data Cleaning and Sorting/Saturn - mastDownload/UV data/: SATURN_RAW_MASTER.pkl
Spectral Data Cleaning and Sorting/Uranus - mastDownload/UV data/: URANUS_RAW_MASTER.pkl
Spectral Data Cleaning and Sorting/Z UV Final Master File/: UV_Spectra_Final_Merge.pkl
Spectral Service/app/: main.py  schemas.py
Spectral Service/app/routers/: analyze.py
Spectral Service/models/: ir_config.json  uv_config.json
Spectral Service/training/: evaluate_real.py  mlflow_utils.py  train_ir.py  train_uv.py
Test Data/: earth_ir.pkl  earth_uv.pkl
agent/: README.md  __init__.py  base.py  graph.py  runner.py  state.py
agent/agents/: __init__.py  image_model.py  inference.py  orchestrator.py  reporter.py  spectral_model.py  validator.py
agent/prompts/: model_runner_prompt.txt  orchestrator_prompt.txt  orchestrator_v2_prompt.txt  reporter_prompt.txt
experiments/: imagemodel.ipynb  jupyter_spectral.ipynb  model_catalog.ipynb
(+23 files in other folders)
