[project]
name = "astrai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "astroquery>=0.4.11",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.2.0,<3.0.0",
    "polar>=0.0.127",
    "torch>=2.10.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.26",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=0.1.0",
    "watchdog>=4.0.0",
    "mlflow>=3.3.0",
    "streamlit>=1.40.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "google-generativeai>=0.8.6",
    "python-multipart>=0.0.22",
    "optuna>=4.1.0",
    "scipy>=1.15.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "requests>=2.32.0",
]
